Robot in main loop, but running forward permanently - investigate

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,5 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 upload_speed = 115200
+build_flags = -fexceptions
+build_unflags = -fno-exceptions
