--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,8 @@
 ;
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
+; for ota add
+;upload_port = <esp-ip-address>
 
 [env:esp8266]
 platform = espressif8266
@@ -15,3 +17,4 @@ framework = arduino
 upload_speed = 115200
 build_flags = -fexceptions
 build_unflags = -fno-exceptions
+;upload_port = 192.168.1.13
