alligment + setup cleaning

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,4 @@ framework = arduino
 upload_speed = 115200
 build_flags = -fexceptions
 build_unflags = -fno-exceptions
-;upload_port = 192.168.1.13
+upload_port = 192.168.1.13
