--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,7 @@ framework = arduino
 upload_speed = 115200
 build_flags = -fexceptions
 build_unflags = -fno-exceptions
-upload_port = 192.168.1.13
+upload_port = 192.168.1.12
+upload_protocol = espota
+upload_flags =
+        --auth=esp8266
