Debug flag moved to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 project(robot_test)
 
 set(CMAKE_CXX_STANDARD 14)
+#add_compile_options(-Wall -Wextra -pedantic -Werror -DNDEBUG)
 add_compile_options(-Wall -Wextra -pedantic -Werror)
 
 include(cmake/GTest.cmake)
