cleaning unused files, added library to platformio init

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,9 +6,7 @@
 ;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
-; for ota add
-;upload_port = <esp-ip-address>
+; https://docs.platformio.org/page/projectconf.html
 
 [env:esp8266]
 platform = espressif8266
@@ -17,7 +15,4 @@ framework = arduino
 upload_speed = 115200
 build_flags = -fexceptions
 build_unflags = -fno-exceptions
-;upload_port = 192.168.1.13
-;upload_protocol = espota
-;upload_flags =
-;        --auth=esp8266
+lib_deps = links2004/WebSockets@^2.3.6
