fixed ET + dir entity removed

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,13 +1,3 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:esp8266]
 platform = espressif8266
 board = nodemcuv2
@@ -15,4 +5,5 @@ framework = arduino
 upload_speed = 115200
 build_flags = -fexceptions
 build_unflags = -fno-exceptions
-lib_deps = links2004/WebSockets@^2.3.6
+lib_deps =
+  WebSockets
